@@ -1,4 +1,4 @@
 DIST wagon-http-lightweight-1.0.tar.bz2 6625 RMD160 d47a5fa18ed5b71eb880f2f269eade1420ba6b13 SHA1 c3bd11ec918fa751f3f3083f34115a2f52f3fe41 SHA256 a4774f68773b47c90174c3c40983c5f867521d3d8957336dcac0e26125234d13
-EBUILD wagon-http-lightweight-1.0.ebuild 789 RMD160 71cdefb43eef157554ef128687cfc11c1cbac0de SHA1 364c4c55b5b5dd635bf1cff3ebd146205e3b2d69 SHA256 94ea65e6a6ca452acb8a7dfe5a6153907c4c9c45234cad8ba8c0b924cd51afda
-MISC ChangeLog 336 RMD160 65a875d4ec033dca2eb82fca2d58a5fc73a2887c SHA1 28515e12dbdda7bf2ea57194704362274e99fbb1 SHA256 0e133b4b6684daf6429d04dc6ba9c2ffce22d89bd21a801a6afd93d4337b9c0f
+EBUILD wagon-http-lightweight-1.0.ebuild 814 RMD160 5e822a221c7f8f9ea141a21867438d2e66b82e67 SHA1 5e2bc7c206967ea2359456e8c47014ea29009b1c SHA256 89266ada1535819e45e93034dd4a8d109ef7551a3da7fb269a3355fe3f8cfb1d
+MISC ChangeLog 450 RMD160 b28f9de95c0b4368a77f6ae73539af78cf9296fb SHA1 183dfdfdb9cc4c4dee0d126b80404b13cb0ffd90 SHA256 e890369224b5345f3c60a664b0b6cc70360c6fa3ad03eb0fdec9247e344dd9c5
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
