@@ -2,14 +2,16 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source doc"
+
 inherit java-maven-2
 
 DESCRIPTION="The Wagon API project defines a simple API for transfering resources (artifacts) to and from repositories"
 # svn co http://svn.apache.org/repos/asf/maven/wagon/tags/*/wagon-provider-api/ wagon-provider-api
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source doc"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 LICENSE="Apache-2.0"
 HOMEPAGE="http://maven.apache.org"
 DEP="dev-java/plexus-utils
